style.less
/* ... */
input[type="search"]::-webkit-search-decoration {
	/* Corrects inner padding displayed oddly in S5, Chrome on OSX */
	-webkit-appearance: none;
}

button::-moz-focus-inner,
input::-moz-focus-inner {
	/* Corrects inner padding and border displayed oddly in FF3/4 www.sitepen.com/blog/2008/05/14/the-devils-in-the-details-fixing-dojos-toolbar-buttons/ */
	border: 0;
	padding: 0;
}

input[type=text],
input[type=email],
input[type=password],
textarea {
	.box-sizing(border-box);
	color: #666;
	border: 1px solid #ccc;
	border-radius: 3px;
}

input[type=text]:focus,
input[type=email]:focus,
input[type=password]:focus,
textarea:focus {
	color: #111;
}

input[type=text],
input[type=email],
input[type=password] {
	padding: 3px;
}

textarea {
	/* Removes default vertical scrollbar in IE6/7/8/9 */
	overflow: auto;
	/* Improves readability and alignment in all browsers */
	vertical-align: top;
}

/* Alignment */

.alignleft {
	display: inline;
	float: left;
	margin-right: 1.5em;
}
.alignright {
	display: inline;
	float: right;
	margin-left: 1.5em;
}
.aligncenter {
	clear: both;
	display: block;
	margin: 0 auto;
}

/* Text meant only for screen readers */

.assistive-text {
	clip: rect(1px 1px 1px 1px);
/* IE6, IE7 */

	clip: rect(1px, 1px, 1px, 1px);
	position: absolute !important;
}

.page-links{
	clear:both;
}

#site-title a{
	color: inherit;
}


body {
	background: #dadada;
}

/* =General Layout
----------------------------------------------- */

#page-wrapper {
	padding-top: 20px;
	.box-sizing(border-box);
	width: 1080px;
	margin: 0 auto;
}

.layout-full #page-wrapper{
	width: 100%;
	margin: 0;
	padding: 0;
	overflow: hidden;

	.full-container {
		max-width: 1080px;
		margin-left: auto;
		margin-right: auto;
		position: relative;
	}
}

@media  (max-width:1080px){
	.responsive.layout-boxed #page-wrapper{
		margin: 0;
		padding: 0;
	}

	.responsive.layout-boxed #colophon {
		margin-bottom: 0;
	}
}

#masthead {
	background: #fcfcfc;
	padding: 0 35px 0 35px;
	.box-sizing(border-box);
	.clearfix();

	h1 {
		font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;

		&.logo-title {
			display: inline-block;
			margin-left: 20px;
		}
	}

	.hgroup {
		.clearfix();

		position: relative;
		padding-top: 45px;
		padding-bottom: 45px;

		a {
			text-decoration: none;
		}

		h1 {
			color: #666666;
			font-weight: 100;
			font-size: 36px;
			line-height: 1em;
			vertical-align: middle;
		}

		.logo {
			display: block;
			float: left;
			max-width: 100%;

			img {
				vertical-align: middle;
			}
		}

		.site-description {
			clear: both;
			color: #4b4b4b;
			font-style: italic;
			font-size: 13px;
			margin-bottom: 0;
			padding-top: 5px;
		}

		.support-text {
			line-height: 1.2em;
			position: absolute;
			right: 0;
			top: 50%;
			margin-top: -0.6em;
			color: #4b4b4b;
			font-style: italic;
			max-width: 50%;
		}

		#header-sidebar {
			box-sizing: border-box;
			height: 100%;
			padding-top: 15px;
			padding-bottom: 15px;
			position: absolute;
			right: 0;
			top: 0;

			aside.widget {
				float: left;
				margin-right: 25px;
				margin-bottom: 0;
				position: relative;
				
				&.widget_circleicon-widget {
					clear: none;
				}

				&:last-child {
					margin-right: 0;
				}
			}
			
			.widget-title {
				font-weight: bold;
				margin-bottom: 5px;
			}
		}
	}

	&.masthead-logo-in-menu {

		.main-navigation {
			.clearfix();

			.full-container {
				align-items: center;
				display: flex;
			}
		}

		.menu-mobilenav-container {
			margin-right: 0;
			margin-left: auto;
		}

		.logo-in-menu-wrapper {
			margin-top: auto;
			margin-bottom: auto;
		}

		.logo {
			display: flex;
			padding: 10px 0;
			margin-right: 15px;

			> * {
				display: block;
			}

			> img {
				max-height: 33px;
				width: auto;

				height: auto;
				max-width: 100%;
			}

			> img.logo-no-height-constrain {
				max-height: none;
			}

			> h1 {
				font-size: 20px;
				font-weight: 100;
				padding: 7px 15px;
			}
		}

		.site-description {
			clear: both;
			color: #e2e2e2;
			font-size: 12px;
			font-style: italic;
			margin: -10px 0 0;
			padding: 0 0 15px;
		}
	}
}

.layout-boxed #masthead.masthead-logo-in-menu {
	.logo,
	.site-description {
		margin-left: 25px;
	}
}

body.ie-8,body.ie-9 {
	#masthead .hgroup {
		#header-sidebar {
			padding-top: 40px;
			padding-bottom: 40px;
		}
	}
}

#main {
	.clearfix();
}

#primary {
	float: left;
	width: 71.287%;
}

body.sidebar-position-left #primary {
	float: right;
}

body.sidebar-position-left.page-template-home-panels #primary,
body.sidebar-position-left.page-template-template-full #primary,
body.sidebar-position-left.page-template-template-full-notitle #primary{
  float: none;
}

body.sidebar-position-none #primary {
	float: none;
	width: auto;
}

body.no-sidebar #primary {
	float: none;
	width: auto;
}

/* Full Width Primary blocks */
body.siteorigin-panels-lite-home #primary,
body.vantage-layout-width-full-width #primary,
body.vantage-layout-width-full-width-stretched #primary {
	width: auto;
	float: none;
}

.vantage-layout-width-full-width-stretched #main > .full-container {
	max-width: 100% !important;
}

.vantage-layout-width-normal #primary {
	float: left;
	width: 71.287%;
}

#secondary {
	float: right;
	width: 23.762%;
}

body.sidebar-position-left #secondary {
	float: left;
}

body.sidebar-position-none #secondary {
	display: none;
}

.siteorigin-panels-home #primary,
.page-template-templatestemplate-full-php #primary,
.page-template-home-panels-php #primary,
.page-template-templatestemplate-full-notitle-php #primary{
	width: auto;
	float: none;
}

.page-template-default #primary {
	float: left;
	width: 71.287%;
}

#main {
	background: #fcfcfc;
	padding: 35px;
}
/* ... */

